--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,7 +2,7 @@ env:
   browser: true
   es2021: true
 extends:
-  - standard
+  - eslint:recommended
   - plugin:react/recommended
 parserOptions:
   ecmaVersion: latest
